k8s/prod/be-resource.yml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  type: NodePort
  selector:
    pod: todo-be
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-be
  labels:
    component: be
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: todo-be
  template:
    metadata:
      labels:
        pod: todo-be
    spec:
      containers:
      - name: todo-be
        image: superknife0512/todo-be
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
