k8s/prod/fe-resource.yml
apiVersion: v1
kind: Service
metadata:
  name: fe-service
spec:
  type: NodePort
  selector:
    pod: todo-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-fe
  labels:
    component: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: todo-fe
  template:
    metadata:
      labels:
        pod: todo-fe
    spec:
      containers:
      - name: todo-fe
        image: superknife0512/todo-fe
        imagePullPolicy: Always  
        ports:
        - containerPort: 80
