k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fe-service
              port:
                number: 80
        - path: /api/v1
          pathType: Prefix
          backend:
            service:
              name: be-service
              port:
                number: 5000
